k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nate-portfolio-service
spec:
  selector:
    app: nate-portfolio
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
