k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nate-portfolio-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - natecirino.com
    secretName: portfolio-tls
  rules:
  - host: natecirino.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nate-portfolio-service
            port:
              number: 80
